# gaussian-mixture

./: .gitignore  CMakeLists.txt  README.md  do_unit_test.sh  gmm.cpp  gmm.hpp  gmm_matrix_support.cpp  gmm_matrix_support.cu  gmm_matrix_support.h  gmm_matrix_support.hpp  test.cpp  test.ipynb  test.py  test_cpu.py
unit_test/: allAddInplace.py  allDivInplace.py  allExp2Inplace.py  allLog2.py  allMulInplace.py  arrMean.py  arrSum.py  colLog2SumExp2.py  dataAverageCovariance.py  dataCovariance.py  matCholesky.py  matColMean.py  matDiagAddInplace.py  matMul.py  matPerRowDivInplace.py  matVecColAddInplace.py  matVecRowSub.py  matVecRowSubInplace.py  rowSum.py  rowSumSquare.py  solveLower.py  sumLog2Diag.py
unit_test_cpu/: allDivInplace.py  matColMean.py  matPerRowDivInplace.py  matVecColAddInplace.py  matVecRowSub.py  matVecRowSubInplace.py  rowSumSquare.py  solveLower.py
